--- a/Publications.html
+++ b/Publications.html
@@ -84,10 +84,10 @@
 
         <!-- insert the page content here -->
 
-        <h1>Since Year 2009</h1>
+        <h1></h1>
 
           <ul>
-          <li> Zhaoyang Zhang, <strong> Zhanghui Kuang </strong>, Ping Luo, Litong Feng, Wei Zhang, Temporal Sequence Distillation: Towards Few-Frame Action Recognition in Videos. In: <strong>ACM MM</strong> (2018) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
+          <li> Litong Feng, Ziyin Li, <strong> Zhanghui Kuang </strong>, Wei Zhang, Extractive Video Summarizer with Memory Augmented Neural Networks. In: <strong>ACM MM</strong> (2018) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Zhaoyang Zhang, <strong> Zhanghui Kuang </strong>, Ping Luo, Litong Feng, Wei Zhang, Temporal Sequence Distillation: Towards Few-Frame Action Recognition in Videos. In: <strong>ACM MM</strong> (2018) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Xiaoyu Yue, <strong>Zhanghui Kuang </strong>, Zhaoyang Zhang, Zhenfang Chen, Pan He, Yu Qiao, Wei Zhang, Boosting up Scene Text Detectors with Guided CNN. In: <strong>BMVC</strong> (2018) (oral presentation) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Shuyang Sun, <strong>Zhanghui Kuang </strong>, Wanli Ouyang, Lu Sheng, Wei Zhang, Optical Flow Guided Feature: A Fast and Robust Motion Representation for Video Action Recognition.In: <strong>CVPR</strong> (2018)  [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
