--- a/Publications.html
+++ b/Publications.html
@@ -87,6 +87,7 @@
         <h1></h1>
 
           <ul>
+          <li> Zhenfang Chen, <strong>Zhanghui Kuang</strong>, Wayne Zhang, Kwan-Yee Wong.: Learning Local Similarity with Spatial Relations for Object Retrieval. In: <strong>ACM MM</strong> (2019) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Yi Li, <strong>Zhanghui Kuang</strong>, Yimin Chen, Wayne Zhang, Data-Driven Neuron Allocation for Scale Aggregation Networks. In: <strong>CVPR</strong> (2019) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Litong Feng, Ziyin Li, <strong> Zhanghui Kuang </strong>, Wayne Zhang, Extractive Video Summarizer with Memory Augmented Neural Networks. In: <strong>ACM MM</strong> (2018) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Zhaoyang Zhang, <strong> Zhanghui Kuang </strong>, Ping Luo, Litong Feng, Wayne Zhang, Temporal Sequence Distillation: Towards Few-Frame Action Recognition in Videos. In: <strong>ACM MM</strong> (2018) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
