--- a/Publications.html
+++ b/Publications.html
@@ -87,6 +87,8 @@
         <h1></h1>
 
           <ul>
+          <li> <strong>Zhanghui Kuang*</strong>, Yiming Gao*, Guanbin Li, Ping Luo, Yiming Chen, Liang Lin, Wayne Zhang.: Fashion Retrieval via Graph Reasoning Networks on a Similarity Pyramid. In: <strong>ICCV</strong> (2019) (oral presentation) (* indicates equal contribution)[<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
+          <li> Jiaqi Duan, Youjiang Xu, <strong>Zhanghui Kuang</strong>, Xiaoyu Yue, Hongbin Sun, Yue Guan, Wayne Zhang.: Geometry Normalization Networks for Accurate Scene Text Detection. In: <strong>ICCV</strong> (2019) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Zhenfang Chen, <strong>Zhanghui Kuang</strong>, Wayne Zhang, Kwan-Yee Wong.: Learning Local Similarity with Spatial Relations for Object Retrieval. In: <strong>ACM MM</strong> (2019) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Yi Li, <strong>Zhanghui Kuang</strong>, Yimin Chen, Wayne Zhang, Data-Driven Neuron Allocation for Scale Aggregation Networks. In: <strong>CVPR</strong> (2019) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Litong Feng, Ziyin Li, <strong> Zhanghui Kuang </strong>, Wayne Zhang, Extractive Video Summarizer with Memory Augmented Neural Networks. In: <strong>ACM MM</strong> (2018) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
