--- a/Publications.html
+++ b/Publications.html
@@ -87,6 +87,9 @@
         <h1></h1>
 
           <ul>
+          <li> Liyang Liu,  <strong>Zhanghui Kuang</strong>, Yimin Chen, Jing-Hao Xue, Wenming Yang, Wayne Zhang. IncDet: In Defense of Elastic Weight Consolidation for Incremental Object Detection. In: IEEE Transactions on Neural Networks and Learning Systems. 2020. [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
+          <li> Jianchao Wu, <strong>Zhanghui Kuang</strong>, Wayne Zhang, Limin Wang, Gangshan Wu.: Revisiting RCNN for Action Detection in Videos. In: <strong>ECCV</strong> (2020) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
+          <li> Xiaoyu Yue, <strong>Zhanghui Kuang</strong>, Chenhao Lin, Hongbin SUN, Wayne Zhang.: RobustScanner: Dynamically Enhancing Positional Clues for Robust Text Recognition. In: <strong>ECCV</strong> (2020) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> <strong>Zhanghui Kuang*</strong>, Yiming Gao*, Guanbin Li, Ping Luo, Yiming Chen, Liang Lin, Wayne Zhang.: Fashion Retrieval via Graph Reasoning Networks on a Similarity Pyramid. In: <strong>ICCV</strong> (2019) (oral presentation) (* indicates equal contribution)[<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Jiaqi Duan, Youjiang Xu, <strong>Zhanghui Kuang</strong>, Xiaoyu Yue, Hongbin Sun, Yue Guan, Wayne Zhang.: Geometry Normalization Networks for Accurate Scene Text Detection. In: <strong>ICCV</strong> (2019) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Zhenfang Chen, <strong>Zhanghui Kuang</strong>, Wayne Zhang, Kwan-Yee Wong.: Learning Local Similarity with Spatial Relations for Object Retrieval. In: <strong>ACM MM</strong> (2019) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
