--- a/Publications.html
+++ b/Publications.html
@@ -87,6 +87,7 @@
         <h1></h1>
 
           <ul>
+          <li> Yiming Gao*, <strong>Zhanghui Kuang*</strong>, Guanbin Li, Ping Luo, Yiming Chen, Liang Lin, Wayne Zhang.: Fashion Retrieval via Graph Reasoning Networks on a Similarity Pyramid. In: IEEE Transactions on Pattern Analysis and Machine Intelligence. 2020.  (* indicates equal contribution)[<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Liyang Liu,  <strong>Zhanghui Kuang</strong>, Yimin Chen, Jing-Hao Xue, Wenming Yang, Wayne Zhang. IncDet: In Defense of Elastic Weight Consolidation for Incremental Object Detection. In: IEEE Transactions on Neural Networks and Learning Systems. 2020. [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Jianchao Wu, <strong>Zhanghui Kuang</strong>, Wayne Zhang, Limin Wang, Gangshan Wu.: Revisiting RCNN for Action Detection in Videos. In: <strong>ECCV</strong> (2020) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Xiaoyu Yue, <strong>Zhanghui Kuang</strong>, Chenhao Lin, Hongbin SUN, Wayne Zhang.: RobustScanner: Dynamically Enhancing Positional Clues for Robust Text Recognition. In: <strong>ECCV</strong> (2020) [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
