--- a/Publications.html
+++ b/Publications.html
@@ -87,6 +87,7 @@
         <h1></h1>
 
           <ul>
+          <li>  Yiqin Zhu, Jianyong Chen, Lingyu Liang, <strong>Zhanghui Kuang</strong>, Lianwen Jin, Wayne Zhang, Fourier Contour Embedding for Arbitrary-Shaped Text Detection. In: CVPR (2021).  [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Liyang Liu, Yi Li, <strong>Zhanghui Kuang</strong>, Jing-Hao Xue, Yimin Chen, Wenming Yang, Qingmin Liao, and Wayne Zhang.: Towards Impartial Multi-task Learning. In: ICLR (2021). [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Liyang Liu, Bochao Wang, <strong>Zhanghui Kuang</strong>, Jing-Hao Xue, Yiming Chen, Wenming Yang, Qinming Liao. and Wayne Zhang.: GenDet: Meta learning to generate detectors from few shots. In: IEEE Transactions on Neural Networks and Learning Systems. 2021. [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Yiming Gao*, <strong>Zhanghui Kuang*</strong>, Guanbin Li, Ping Luo, Yiming Chen, Liang Lin, Wayne Zhang.: Fashion Retrieval via Graph Reasoning Networks on a Similarity Pyramid. In: IEEE Transactions on Pattern Analysis and Machine Intelligence. 2020.  (* indicates equal contribution)[<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
