--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   I obtained my Ph.D. degree from the Department of Computer Science, the University of Hong Kong (HKU). Before joining HKU,
   I received a Bachelor of Science from <a href="http://www.sysu.edu.cn"/> Sun Yat-sen University</a> in 2009. 
   I did an internship under the supervision of Dr. <a href="http://research.microsoft.com/en-us/um/people/jiansun/">Jian Sun</a> at
-  Microsoft Research Asia from April 2012 to October 2012. </p>               <h2>Research Interests</h2>        
+  Microsoft Research Asia from April 2012 to October 2012. I lead the open source project <a href="https://github.com/open-mmlab/mmocr">mmocr</a>.</p>               <h2>Research Interests</h2>        
   <p>I'm interested in computer vision and deep learning.  </p>        
   <div id="footer">      Last updated on July 4, 2013    </div>  <div style="text-align: center; font-size: 0.75em;">   
   Copyright &copy;    <a href="http://www.html5webtemplates.co.uk">HTML5webtemplates.co.uk</a>.  </div>   </body></html> 
