--- a/Publications.html
+++ b/Publications.html
@@ -87,6 +87,7 @@
         <h1></h1>
 
           <ul>
+          <li>  Yiming Gao, <strong>Zhanghui Kuang</strong>, Guanbin Li, Wayne Zhang and Liang Lin, "Hierarchical Reasoning Network for Human-Object Interaction Detection", IEEE Transactions on Image Processing (T-IP), 2021. [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li>  Liyang Liu, Shilong Zhang,  <strong>Zhanghui Kuang</strong>,  Jing-Hao Xue,  Aojun Zhou,  Xinjiang Wang,  Yimin Chen, Wenming Yang, Qingmin Liao, Wayne Zhang.: Group Fisher Pruning for Practical Network Compression. In: ICML (2021).  [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li>  Yiqin Zhu, Jianyong Chen, Lingyu Liang, <strong>Zhanghui Kuang</strong>, Lianwen Jin, Wayne Zhang, Fourier Contour Embedding for Arbitrary-Shaped Text Detection. In: CVPR (2021).  [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Liyang Liu, Yi Li, <strong>Zhanghui Kuang</strong>, Jing-Hao Xue, Yimin Chen, Wenming Yang, Qingmin Liao, and Wayne Zhang.: Towards Impartial Multi-task Learning. In: ICLR (2021). [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
