--- a/Publications.html
+++ b/Publications.html
@@ -87,6 +87,9 @@
         <h1></h1>
 
           <ul>
+          <li> Xiaoyu Yue, Shuyang Sun, <strong>Zhanghui Kuang</strong>, Meng Wei, Philip Torr, Wayne Zhang, and Dahua Lin.: Vision Transformer with Progressive Sampling. In: ICCV (2021).  [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
+          <li> Yi Li, <strong>Zhanghui Kuang</strong>, Liyang Liu, Yimin Chen, and Wayne Zhang.: Pseudo-mask Matters in Weakly-supervised Semantic Segmentation. In: ICCV (2021).  [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
+          <li> Zhanghui Kuang, Hongbin Sun, Zhizhong Li, Xiaoyu Yue, Tsui Hin Lin, Jianyong Chen, Huaqiang Wei, Yiqin Zhu, Tong Gao, Wenwei Zhang, Kai Chen, Wayne Zhang, and Dahua Lin.: MMOCR: A Comprehensive Toolbox for Text Detection, Recognition and Understanding. In: ACM MM (2021).  [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li>  Yiming Gao, <strong>Zhanghui Kuang</strong>, Guanbin Li, Wayne Zhang and Liang Lin, "Hierarchical Reasoning Network for Human-Object Interaction Detection", IEEE Transactions on Image Processing (T-IP), 2021. [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li>  Liyang Liu, Shilong Zhang,  <strong>Zhanghui Kuang</strong>,  Jing-Hao Xue,  Aojun Zhou,  Xinjiang Wang,  Yimin Chen, Wenming Yang, Qingmin Liao, Wayne Zhang.: Group Fisher Pruning for Practical Network Compression. In: ICML (2021).  [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li>  Yiqin Zhu, Jianyong Chen, Lingyu Liang, <strong>Zhanghui Kuang</strong>, Lianwen Jin, Wayne Zhang, Fourier Contour Embedding for Arbitrary-Shaped Text Detection. In: CVPR (2021).  [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
