--- a/Publications.html
+++ b/Publications.html
@@ -87,7 +87,7 @@
         <h1></h1>
 
           <ul>
-          <li>Anyi Rao, Linning Xu, Zhizhong Li, Qingqiu Huang, Zhanghui Kuang, Wayne Zhang, Dahua Lin.: A Coarse-to-Fine Framework for Automatic Video Unscreen. In: IEEE Transactions on Multimedia. 2022. [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
+          <li>Anyi Rao, Linning Xu, Zhizhong Li, Qingqiu Huang, <strong>Zhanghui Kuang</strong>, Wayne Zhang, Dahua Lin.: A Coarse-to-Fine Framework for Automatic Video Unscreen. In: IEEE Transactions on Multimedia. 2022. [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Yi Li, Yiqun Duan, <strong>Zhanghui Kuang</strong>, Yimin Chen, Wayne Zhang, Xiaomeng Li.: Uncertainty estimation via response scaling for pseudo-mask noise mitigation in weakly-supervised semantic segmentation. In: AAAI (2022).  [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Xiaoyu Yue, Shuyang Sun, <strong>Zhanghui Kuang</strong>, Meng Wei, Philip Torr, Wayne Zhang, and Dahua Lin.: Vision Transformer with Progressive Sampling. In: ICCV (2021).  [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
           <li> Yi Li, <strong>Zhanghui Kuang</strong>, Liyang Liu, Yimin Chen, and Wayne Zhang.: Pseudo-mask Matters in Weakly-supervised Semantic Segmentation. In: ICCV (2021).  [<a>PDF</a>] [<a href="Software.html">Code</a>]</li>
