--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <!--<p><a href="cv/zhkuang_cv.pdf">Curriculum Vitae</a></p>  -->
      <p></p>
      <p>Email: kuangzhh AT gmail.com</p>           </td>        </tr>        </table>        <p>I am 
-      a  research director at sensetime, where I lead the image&video understanding group. 
+      a  senior research director at sensetime, where I lead the Industrial Intelligent Manufacturing group. 
   I obtained my Ph.D. degree from the Department of Computer Science, the University of Hong Kong (HKU). Before joining HKU,
   I received a Bachelor of Science from <a href="http://www.sysu.edu.cn"/> Sun Yat-sen University</a> in 2009. 
   I did an internship under the supervision of Dr. <a href="http://research.microsoft.com/en-us/um/people/jiansun/">Jian Sun</a> at
